# zeno_mm_manager

./: .gitignore  CMakeLists.txt  README.md  Readme_macchina_a_stati.md  package.xml
config/: params.yaml
json/: niasca_transetti_ripresa_drone.json
json/example/: Livorno-----dati_2025-10-07T10-27-19-282Z.json  Livorno----dati_2025-10-07T10-25-34-756Z.json  json_example.json  json_example2.json  mappa_ws.html  niasca_area.json  niasca_area2.json  niasca_area3.json  test_server_websocket_connection.py
json/niasca_10_25/: niasca.json  niasca2.json  niasca3.json
json/prova/: niasca_prova.json
launch/: ammirare.launch  zeno_mm.launch
msg/: Waypoint.msg  WaypointList.msg
scripts/: ammirare.py  plot.py  save_json.py  zeno_mission_manager_from_file.py
src/: zeno_mission_manager.cpp
